--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week8-assignment",
+  "name": "week9-assignment",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.0.2",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "pg": "^8.13.0",
